<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.glomadrian.grav.GravView
        android:id="@+id/gravew"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:animationGenerators="@array/BubbleAnimations"
        app:array_colors="@array/Spectral"
        app:ball_from_size="10dp"
        app:ball_to_size="20dp"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
        app:regular_cell_size="300"
        app:regular_variance="200"
        app:shake_direction="vertical"
        app:shake_max_duration="20000"
        app:shake_min_duration="10000"
        app:shake_variance="500dp"
        app:side_to_side_direction="leftToRight"
        app:side_to_side_max_duration="10000"
        app:side_to_side_min_duration="10000" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/tv_water"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_fat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tv_muscle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_muscle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tv_metabolism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_metabolism"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/tv_bone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_water"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tv_vfat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_vfat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/tv_bodyImpedance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bodyImpedance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
