<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="7">

                <EditText
                    android:id="@+id/input_sign_in_device_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_device_id"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_goto_sign_in_scan"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_qr_style"
                android:scaleType="centerCrop" />
        </LinearLayout>


        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/prompt_select_user"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                app:layout_constraintVertical_bias="0.5" />

            <Spinner
                android:id="@+id/spinner_sign_in_user"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@id/constraintLayout"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                app:layout_constraintVertical_bias="0.5" />
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/btn_sign_in" />

        <TextView
            android:id="@+id/link_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/prompt_link_sign_up"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
