<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/me_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_heightPercent="34%w"
                app:layout_widthPercent="100%w">

                <ImageView
                    android:id="@+id/head_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:src="@mipmap/logo_app_while" />

                <TextView
                    android:id="@+id/tv_head_user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head_user_type"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_head_device_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head_device_id"
                    android:textColor="@color/white" />
            </LinearLayout>

            <com.leaf.yeyy.viewlib.SettingView
                android:id="@+id/ios_style_setting_view_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="11dp"
                app:iOSStyle="false" />

            <SeekBar
                android:id="@+id/seekbar_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:max="100"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/action_exit_account" />

        </com.zhy.android.percent.support.PercentLinearLayout>
    </ScrollView>
</FrameLayout>


