<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_launch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.github.glomadrian.grav.GravView
        android:id="@+id/gravew"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:animationGenerators="@array/BubbleAnimations"
        app:array_colors="@array/Spectral"
        app:ball_from_size="10dp"
        app:ball_to_size="20dp"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
        app:regular_cell_size="300"
        app:regular_variance="200"
        app:shake_direction="vertical"
        app:shake_max_duration="20000"
        app:shake_min_duration="10000"
        app:shake_variance="500dp"
        app:side_to_side_direction="leftToRight"
        app:side_to_side_max_duration="10000"
        app:side_to_side_min_duration="10000" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/health_data_bg" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tvWaistline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_nav_waistline_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/tvHipline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_nav_hipline_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/tvBust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_nav_bust_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>